fix: caption spacing

--- a/styles.css
+++ b/styles.css
@@ -125,8 +125,6 @@ a.continue::after {
 figcaption, time {
   font-size: 1rem;
   font-weight: 300;
-  text-align: center;
-  margin-top: -5px;
 }
 
 aside {
